# id-cards-filler

./: .gitignore  pyproject.toml  readme.md
ids_filler/: __init__.py  __main__.py
ids_filler/attendess/: attendees_loader.py
ids_filler/config/: __init__.py  config.py  config.yaml.sample
ids_filler/images/: image_loader.py  image_modifier.py
ids_filler/resources/attendees/: guest.csv.sample
